v 7.3.0
  - Always set the 'origin' remote in satellite actions
  - Write authorized_keys in tmp/ during tests
  - Use sockets to connect to Redis
  - Expire Rack sessions after 1 week
  - Cleaner signin/signup pages
  - Improved comments UI
  - Better search with filtering, pagination etc
  - Added a checkbox to toggle line wrapping in diff (Yuriy Glukhov)
  - Prevent project stars duplication when fork project
  - Use the default Unicorn socket backlog value of 1024
  - Support Unix domain sockets for Redis
  - Store session Redis keys in 'session:gitlab:' namespace
  - Deprecate LDAP account takeover based on partial LDAP email / GitLab username match
  - Use /bin/sh instead of Bash in bin/web, bin/background_jobs (Pavel Novitskiy)
  - Keyboard shortcuts for productivity (Robert Schilling)
  - API: filter issues by state (Julien Bianchi)
  - API: filter issues by labels (Julien Bianchi)
  - Add system hook for ssh key changes
  - Add blob permalink link (Ciro Santilli)
  - Create annotated tags through UI and API (Sean Edge)
  - Snippets search (Charles Bushong)
  - Comment new push to existing MR
  - Add 'ci' to the blacklist of forbidden names
  - Improve text filtering on issues page
  - Comment & Close button
  - Process git push --all much faster
  - Don't allow edit of system notes
  - Project wiki search (Ralf Seidler)
  - Enabled Shibboleth authentication support (Matus Banas)
  - Zen mode (fullscreen) for issues/MR/notes (Robert Schilling)
  - Add ability to configure webhook timeout via gitlab.yml (Wes Gurney)
  - Sort project merge requests in asc or desc order for updated_at or created_at field (sponsored by O'Reilly Media)

v 7.2.1
  - Delete orphaned labels during label migration (James Brooks)
  - Security: prevent XSS with stricter MIME types for raw repo files

v 7.2.0
  - Explore page
  - Add project stars (Ciro Santilli)
  - Log Sidekiq arguments
  - Better labels: colors, ability to rename and remove